--- a/package.json
+++ b/package.json
@@ -27,8 +27,12 @@
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mailgen": "^2.0.28",
     "mongoose": "^8.1.2",
     "mongoose-aggregate-paginate-v2": "^1.0.7",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.10",
+    "otp-generator": "^4.0.1",
+    "twilio": "^4.22.0"
   }
 }
